--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -15,7 +15,10 @@
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-countdown": "^2.3.6",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "zustand": "^5.0.1"
   },
